--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "React Icons",
-  "short_name": "react-icons",
+  "name": "Vyagita Icons",
+  "short_name": "vyaguta-icons",
   "theme_color": "#e91e63",
   "background_color": "#ffffff",
   "display": "browser",
