--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "prism-react-renderer": "^1.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "prabeshshakya/react-icons",
-    "tiny-skeleton-loader-react": "^1.1.0"
+    "tiny-skeleton-loader-react": "^1.1.0",
+    "vyaguta-icons": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^13.5.2",
